--- a/myaccount.html
+++ b/myaccount.html
@@ -22,7 +22,7 @@
       </div>
       <div class= "WelcomeButtons">
         <button type="button">Update Profile</button>
-        <button type="button">Go to Acheivement Tracker</button>
+        <button type="button">Go to Achievement Tracker</button>
     </div>
 
       
