--- a/accountpage.html
+++ b/accountpage.html
@@ -1,34 +1,21 @@
-h1, p, h2, button {
-  text-align: center;
-  margin: 0 auto;
-  display: inline-block;
-  padding-top: 0.35em;
-  padding-bottom: 0.1em;
-  padding-left: 0.75em;
-  padding-right: 0.75em;
-  display: block;
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Account Page</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    
+    <h1>Welcome back, First Last!</h1>
+    <br>    
+    <p>Your points: </p>
+    <br>    
+    <h2>100</h2>
+    <br>    
 
-}
+    <button type="button">Earn more now!</button>
 
-h1, h2{
-  font-size: 40px
-
-}
-p {
-  font-size: 20px;
-
-}
-h2{
-  
-  border-style: solid;
-  border-width: 10px;
-  border-left-width: 10px;
-  border-right-width: 10px;
-  border-color: green;
-  width: 100px;
-
-}
-button{
-  width: 100px;
-  height: 50px
-}
+  </body>
+</html>
