--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
-{% extends 'triv_tracker_app/base.html' %}
-{% load staticfiles %}
-{% block head %}
-  <link rel="stylesheet" href="{% static 'triv_tracker_app/index.css' %}">
-{% endblock%}
-{% block body %}
-    {% if user.is_authenticated %}
-      <div class="authenticated-container">
-        <h1>Welcome, {{request.user}}</h1>
-        <h3>Information</h3>
-        <p>First Name: {{request.user.first_name}}</p>
-        <p>Last Name: {{request.user.last_name}}</p>
-        <p>Email: {{request.user.email}}</p>
-        <p>Points: {{profile.points}}</p>
-        <a href="/update/">Update Profile</a>
-      </div>
-    {% else %}
-      <div class="container">
-        <div class="container">
-          <div class="non-authenticated-container text-center p-5">
-            <h1 class="display-2 my-5">Welcome to the TriV Tracker</h1>
-            <h3 class="display-4 my-5">Trivalley CoderDojo's Achievement Tracking System</h3>
-            <a href="/register/" class="register-btn">Register</a>
-          </div>
-        </div>
-      </div>
-    {% endif %}
-{% endblock %}
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" type="text/css" href="css.css">
+</head>
+<body>
+  <!-- Slideshow container -->
+  <div class="slideshow-container">
+
+    <!-- Full-width images with number and caption text -->
+    <div class="mySlides fade">
+      <img src="img1.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides fade">
+      <img src="img2.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides fade">
+      <img src="img3.jpg" style="width:100%">
+    </div>
+
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+  <br>
+
+  <!-- The dots/circles -->
+  <div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+  </div>
+  <script src="javascript.js" charset="utf-8"></script>
+<body>
+</html>
